--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             <a href="https://public.tableau.com/app/profile/jayendran.r/vizzes">Tableau</a> &nbsp;/&nbsp;
             <a href="https://scholar.google.com/citations?user=H9P7ZvcAAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp;
             <a href="https://jayendranravindran.substack.com/">Substack</a> &nbsp;/&nbsp;
-            <a href="https://medium.com/@jayendran">Medium</a>
+            <a href="https://medium.com/@jayendran">Medium</a> &nbsp;/&nbsp;
+		  <a href="https://linktr.ee/JayendranR">Linktree</a>
           </p>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
               <tr>
