--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h2>Work Experience</h2>
                 <p>
                   My core competencies lie in operational excellence, cross-functional collaboration,
-                  process optimization, and data-driven decision making.
+                 and data-driven decision making.
                 </p>
               </td>
             </tr>
@@ -196,7 +196,10 @@
       </div>
 
       <div class="card blue">
-        <img src="images/Wheelchair.jpg" alt="Project Image">
+        <div style="display: flex; gap: 10px;">
+  <img src="images/Wheelchair.jpg" alt="Project Image 1" style="width: 48%;">
+  <img src="images/Siemens.png" alt="Project Image 2" style="width: 48%;">
+</div>
         <div class="card-content">
           <div class="project-title">
             Convertible wheelchair with assist-free transfer support<br>
