--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       height: 120px;
       object-fit: cover;
       border-radius: 10px;
-      margin-right: 20px;
+      margin-bottom: 10px;
     }
     .card-content {
       flex: 1;
@@ -196,10 +196,8 @@
       </div>
 
       <div class="card blue">
-        <div style="text-align: center;">
-   <img src="images/Wheelchair.jpg" alt="Project Image 1" style="width: 80%; margin-bottom: 10px;">
-  <img src="images/Siemens.png" alt="Project Image 2" style="width: 80%;">
-</div>
+   <img src="images/Wheelchair.jpg" alt="Project Image 1">
+  <img src="images/Siemens.png" alt="Project Image 2">
         <div class="card-content">
           <div class="project-title">
             Convertible wheelchair with assist-free transfer support<br>
