--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       height: 120px;
       object-fit: cover;
       border-radius: 10px;
-      margin-bottom: 12px;
+      margin-right: 12px;
 	 display: block;
     }
     .card-content {
