--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
       font-weight: bold;
       display: inline-block;
     }
+	    .card img:nth-of-type(2) {
+  width: 100%;          /* Full container width */
+  height: auto;         /* Keep aspect ratio */
+  object-fit: contain;  /* Show full image, no cropping */
+}
 
     /* Different background colors */
     .card.red { background-color: #FFCCCC; }
@@ -290,7 +295,6 @@
           <img src="images/ReBAM.jpg" alt="Project Image">
   <img src="images/icrom.png" alt="Project Image 2">
         <div class="card-content">
-          <div class="card-content">
             <div class="project-title">Conceptual model for improving maneuverability in borewell rescue devices</div>
             <a href="10.1109/ICRoM54204.2021.9663477">Paper</a> / <a href="data/Poster-2.pdf">Poster</a>
             <div class="section">Adithya Kameswara Rao, Harikrishna K, <strong>Jayendran R</strong>, Meenatchi L S, Sudarsana Jayandan J, Niranjan Kumar P
@@ -303,7 +307,6 @@
           <img src="images/Tap.jpeg" alt="Project Image">
   <img src="images/ipdims.jpeg" alt="Project Image 2">
         <div class="card-content">
-          <div class="card-content">
             <div class="project-title">Novel Water-Conserving Faucet Attachment</div>
             <a href="https://doi.org/10.1007/978-981-19-0296-3_18">Paper</a> 
             <div class="section">Adithya Kameswara Rao, Harikrishna K, <strong>Jayendran R</strong>, Sudarsana Jayandan J, Niranjan Kumar P, Saimothish R
