--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
     
         <div class="card green">
           <img src="images/ReBAM.jpg" alt="Project Image">
-  <img src="images/icrom.png" alt="Project Image 2">
+  <img src="images/ICRoM.png" alt="Project Image 2">
         <div class="card-content">
             <div class="project-title">Conceptual model for improving maneuverability in borewell rescue devices</div>
             <a href="10.1109/ICRoM54204.2021.9663477">Paper</a> / <a href="data/Poster-2.pdf">Poster</a>
