--- a/index.html
+++ b/index.html
@@ -100,10 +100,9 @@
       font-weight: bold;
       display: inline-block;
     }
-	    .card img:nth-of-type(2) {
-  width: 100%;          /* Full container width */
-  height: auto;         /* Keep aspect ratio */
-  object-fit: contain;  /* Show full image, no cropping */
+	   .card img:nth-of-type(2) {
+  object-fit: contain;
+  background-color: #f0f0f0; /* optional: add background to see full bounds */
 }
 
     /* Different background colors */
