--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
     </div>
 
     <div class="card teal">
-      <img src="data/VSM - Cam Shaft Manufacturing.jpg" alt="Project Image">
+      <img src="data/dashboard.jpg" alt="Project Image">
       <div class="card-content">
         <div class="project-title">WEF Travel & Tourism Development Index 2024 Dashboard</div>
         <a href="https://public.tableau.com/app/profile/jayendran.r/viz/WEFsTravelTourismDevelopmentIndex/TTDI">Tableau</a>
