--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     }
     .card {
       display: flex;
+	    gap: 12px;
       border-radius: 12px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       padding: 20px;
@@ -80,10 +81,7 @@
     .card img {
       width: 120px;
       height: 120px;
-      object-fit: cover;
       border-radius: 10px;
-      margin-right: 12px;
-	 display: block;
     }
     .card-content {
       flex: 1;
