--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
           </div>
           <hr>
           <li><span style="font-weight: bold;">Project: </span>Safety Improvement Circle Leader (5 associates & trainees)<br> 
-          <span style="font-weight: bold;">Impact: </span>Installed pedestrian warning system; Eliminated collision hazards.</li>
+          <span style="font-weight: bold;">Impact: </span>Installed safety features in forklifts; Eliminated minor incidents.</li>
           <div class="skills-tags">
             <span class="skill-tag">Team Leadership</span>
             <span class="skill-tag">Safety Management</span>
