--- a/index.html
+++ b/index.html
@@ -407,6 +407,18 @@
       <div class="project-title">Process Development Engineer<span style="font-weight: normal;">, Cell manufacturing</span></div>
       <div class="section"><span>Tesla Giga Factory</span>, Austin, TX</div>
       <div class="section"><em>May 2025 - December 2025</em></div>
+		<p> 
+        <ul>
+          <li><span style="font-weight: bold;">Project: </span>Film characterization of Indo Anode production.<br> 
+          <span style="font-weight: bold;">Impact: </span>Collated thickness, loading, gloss measurement from 50+ samples; 
+          <span style="color: 	#228B22;">&#9650;</span>Refined offline measurement processes using MSA and Gage R&R analysis.</li>
+          <div class="skills-tags">
+            <span class="skill-tag">JMP</span>
+            <span class="skill-tag">Gage R&R</span>
+            <span class="skill-tag">Measurement Systems Analysis</span>
+            <span class="skill-tag">Design of Experiments</span>
+          </div>
+		</ul>p>
     </div>
   </div>
 
@@ -1018,3 +1030,4 @@
     </table>
   </body>
 </html>
+
