--- a/index.html
+++ b/index.html
@@ -410,15 +410,15 @@
 		<p> 
         <ul>
           <li><span style="font-weight: bold;">Project: </span>Film characterization of Indo Anode production.<br> 
-          <span style="font-weight: bold;">Impact: </span>Collated thickness, loading, gloss measurement from 50+ samples; 
-          <span style="color: 	#228B22;">&#9650;</span>Refined offline measurement processes using MSA and Gage R&R analysis.</li>
+          <span style="font-weight: bold;">Impact: </span>Collated thickness, loading, gloss measurement from 50+ samples;<br> 
+          Refined offline measurement processes using MSA and Gage R&R analysis.</li>
           <div class="skills-tags">
             <span class="skill-tag">JMP</span>
             <span class="skill-tag">Gage R&R</span>
             <span class="skill-tag">Measurement Systems Analysis</span>
             <span class="skill-tag">Design of Experiments</span>
           </div>
-		</ul>p>
+		</ul>
     </div>
   </div>
 
@@ -1030,4 +1030,5 @@
     </table>
   </body>
 </html>
+
 
